# ez-os

./: .gitignore  GITHUB_PUBLICATION_GUIDE.md  MIGRATION_COMPARISON.md  MIGRATION_WALKTHROUGH.md  README.md  README_pt.md  SECURITY.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt
.agent/skills/ez-os/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/system/boot/: boot_animation.html
data/: asset_catalog.json  external_memory_map.json  scan_host.py
data/3d_specs/: character_design_print.json
data/hospedeiro#1/R36S-OS 16G/: WHERE_ARE_MY_ROMS.txt  rg351mp-kernel.dtb  rk3326-r35s-linux.dtb
docs/: 3d_printing_guide.md  3d_printing_guide_prompt.txt  EAP.md  agency_principles.md  architecture.md  architecture_v2.md  arkos_integration.md  asset_catalog_guide.md  birth_protocol.md  canon_references.md  character_design.md  ez-fundation_context.md  gallery.md  memory_journal.md  philosophy.md  poc_analysis.md  referencias_canonicas.md  session_template.md  the_bard.md
legacy/: EZ-OS_MIGRATION_STRATEGY.md  EZ-OS_PROJECT_STATE_REPORT.md
legacy/docs/Fundação_I/: EZ-OS — Sistema Operacional de Memória Lúdica Offline.md  EZ-OS_ Documento Fundador (Consolidação).md  EZ-OS_ Sistema Operacional de Memória Lúdica Offline.md  Pasted_content.txt  Pasted_content_01.txt  Pokemon_Red.gb  Super_Mario_World.snes  Zelda_Link_to_the_Past.snes  companion.py  gallery.py  governance.py  launcher.py  memory.py  memory_graph.json  tui.py
legacy/docs/Fundação_II/: README.md  SKILL.md  (+20 more)
src/ez_os/: __init__.py  birth.py
(+25 files in other folders)
