[project]
name = "ez-os"
version = "1.0.0"
description = "Sistema Operacional de Memória Lúdica Offline"
authors = [{name = "João", email = "joao@ez-os.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["retro-gaming", "memory-graph", "companion", "ludic-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "rich>=13.0.0",      # TUI rendering
    "pydantic>=2.0.0",   # Data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ez-os = "ez_os.launcher.launcher:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
